# vidcapview

./: Cargo.toml  README.md
.github/workflows/: buildAndPack.yml
src/: app.rs  cli.rs  hotkey.rs  main.rs  window.rs
src/media/: mod.rs  workaround.rs
