[package]
name = "vidcapview"
version = "0.1.1"
edition = "2024"

[dependencies]

[dependencies.windows]
version = "0.51.0"
features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_DirectX",
    "Media_Core",
    "Media_MediaProperties",
    "Media_Playback",
    "Storage",
    "Storage_Streams",
    "System",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

